--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en-us">
     
 <head>
+  <section>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Web Solutions</title>
-
+       <title>Web Solutions</title>
+  </section>
 </head>
 
 <body>
@@ -25,10 +26,9 @@
             </ul>
         </div>
     </div>   
-</body>  
- 
-    <div class="hero"></div>
-    <div class="content">
+  
+     <div class="hero"></div>
+     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt= "picture of social media" class="float-left" />
             <h2>Search Engine Optimization</h2>
